--- a/Orihsay.vcxproj.filters
+++ b/Orihsay.vcxproj.filters
@@ -141,6 +141,15 @@
     <ClCompile Include="gameplay\BaseTransform.cpp">
       <Filter>Source Files\gameplay</Filter>
     </ClCompile>
+    <ClCompile Include="graphics\ObjectTransformDesc.cpp">
+      <Filter>Source Files\graphics</Filter>
+    </ClCompile>
+    <ClCompile Include="misc\ArrayInt.cpp">
+      <Filter>Source Files\misc</Filter>
+    </ClCompile>
+    <ClCompile Include="misc\BasicMem.cpp">
+      <Filter>Source Files\misc</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="gameplay\GameObject.h">
@@ -247,6 +256,12 @@
     </ClInclude>
     <ClInclude Include="gameplay\BaseTransform.h">
       <Filter>Source Files\gameplay</Filter>
+    </ClInclude>
+    <ClInclude Include="misc\ArrayInt.h">
+      <Filter>Source Files\misc</Filter>
+    </ClInclude>
+    <ClInclude Include="misc\BasicMem.h">
+      <Filter>Source Files\misc</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
